Fix #113323: Paint Secondary color not working in the Image Editor

Caused by c30d6571bb .

Above commit only updated the `BrushPainterCache` `invert` only when the
requirements for a float imbuf changed.
This however always needs to be updated.

Pull Request: https://projects.blender.org/blender/blender/pulls/113334